# indie_studio_2018

./: CMakeLists.txt
include/: Settings.hpp
resources/3D/bomber/: bomberman.mtl  dab.ms3d  floss.ms3d  idle.ms3d  put_bomb.ms3d  running.ms3d
resources/fonts/32px/: menuFont32px.xml
resources/fonts/42px/: menuFont42px.xml
resources/fonts/56px/: menuFont56px.xml
resources/fonts/menu/: menuFont72px.xml
resources/shaders/: dark.frag  realistic.frag  retro.frag  shaders.vert
src/: Main.cpp
src/resources/: Bomb.cpp  Bomb.hpp  CPU.cpp  CPU.hpp  EventReceiver.cpp  EventReceiver.hpp  Options.cpp  Options.hpp  Player.cpp  Player.hpp  Resources.cpp  Resources.hpp  Save.hpp  ShaderCallBack.hpp
src/scenes/: CharacterSelect.cpp  CharacterSelect.hpp  Game.cpp  Game.hpp  IScene.hpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  OptionsScene.cpp  OptionsScene.hpp  StageSelect.cpp  StageSelect.hpp  Victory.cpp  Victory.hpp
